refactor(*): change game state from `hasPlayerWon`
